Bug 48440 - FILEOPEN RTF: page breaks in otherwise empty paragraphs ignored
Summary: FILEOPEN RTF: page breaks in otherwise empty paragraphs ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.2 release
Hardware: Other Windows (All)
: high critical
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0 target:4.0.1
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-04-08 09:22 UTC by Ivan
Modified: 2022-03-31 10:12 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
wrong file content (177.67 KB, application/rtf)
2012-04-08 09:22 UTC, Ivan
Details
the right file content (155.00 KB, application/msword)
2012-04-08 09:23 UTC, Ivan
Details
TABLE VIEWING destroyed file 2 (81.97 KB, application/rtf)
2012-05-22 03:32 UTC, Ivan
Details
A minimalized version which breaks LO (318 bytes, application/rtf)
2012-12-11 17:41 UTC, Dennis Roczek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2012-04-08 09:22:26 UTC
Created attachment 59649 [details]
wrong file content

Problem description:

wrong file content - attachment 1
After conversion into the .doc (attachment 2) - all right
 
Browser: Opera/9.80 (Windows NT 5.2; U; ru) Presto/2.10.229 Version/11.61
Comment 1 Ivan 2012-04-08 09:23:53 UTC
Created attachment 59650 [details]
the right file content
Comment 2 Rainer Bielefeld Retired 2012-04-10 04:35:53 UTC
[Reproducible] with "LibreOffice 3.5.2.2 German UI/Locale [Build-ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f] on German WIN7 Home Premium (64bit) and 
[Reproducible] with parallel  installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 4495824-6299bf6-ec8645]" (tinderbox: Win-x86@6-fast pull time 2012-04-08 00:03:52); here even worse and with high CPU load.

Works fine with LibreOffice 3.3.3  German UI/Locale [OOO330m19 (Build:301) tag libreoffice-3.3.3.1] on German WIN7 Home Premium (64bit), so REGRESSION and  might be "rtf_filter" (Whiteboard)?

There might be additional problems, but the destroye tables is the most obvious one.

This one might be DUP of or related to
"Bug 46662 - FILEOPEN particular RTF document containing nested tables renders incorrectly"


@Ivan:
you created "Convert in doc.doc" with an other software than LibO?

@Miklós:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug
Comment 3 Ivan 2012-04-10 15:41:31 UTC
Yes, I created the file .doc in microsoft office 2007.
Thank you!
Comment 4 Rainer Bielefeld Retired 2012-04-14 13:37:19 UTC
I see the problem with Linux

@Ivan:
Assigned to whom?
Comment 5 Ivan 2012-04-14 16:40:13 UTC
Rainer Bielefeld:
I'm sorry for the status...
Comment 6 Ivan 2012-04-23 10:40:43 UTC
hi!
How is the solution to this problem, a positive?
This is very important for me....
Comment 7 Jean-Baptiste Faure 2012-04-30 12:03:16 UTC
(In reply to comment #3)
> Yes, I created the file .doc in microsoft office 2007.

Hi Ivan,
Did you create the file yourself or did you use a software to generate it? For example a software like Oracle Report or Crystal Report.

This bug looks like bug 47495.

Best regards. JBF
Comment 8 Ivan 2012-04-30 14:36:01 UTC
hi, Jean-Baptiste Faure!

I created a file without using any converters, only microsoft office 2007.
Comment 9 Ivan 2012-05-22 03:32:35 UTC
Created attachment 61947 [details]
TABLE VIEWING destroyed file 2

Another problem file...
Comment 10 Ivan 2012-11-26 16:37:33 UTC
LibO-Dev_4.0.0.0.alpha1_Win_x86_install_multi.msi 25.11.12
Windows XP Prof SP3 3

=(
Comment 11 Dennis Roczek 2012-12-11 17:41:52 UTC
Created attachment 71348 [details]
A minimalized version which breaks LO

I guess the problem has to do with the position. This minimized version breaks at following line:


{\pard\plain\ql\sl-200\sb40\phmrg\pvmrg\posx8740\posy9060\absw2420\absh0\dxfrtext0\dfrmtxtx0\dfrmtxty0{\f1\fs20 Î}

I have checked AOO3.4.1 and Symphony - they don't break. Actual LO beta is not crashing but sadly doesn't opened the file.
Comment 12 Dennis Roczek 2012-12-11 21:01:48 UTC
strike my last comment. It is because of a missing closing bracket (}) which causes the error.

see example code:

{\rtf1\ansi\deff0
{\fonttbl}
{\pard\plain\posx8740\posy9060{A}
{\par\plain\par
}}

The bracket after the A is missing and breaks LO. So this is a problem a) on the error handling and moreover on the saving of RTF.
Comment 13 headsup 2013-01-31 09:01:23 UTC
Probable duplicate of https://bugs.freedesktop.org/show_bug.cgi?id=59393.
Comment 14 Miklos Vajna 2013-02-01 10:22:49 UTC
Yes, seems \page between textframes is ignored, will fix this in a bit.
Comment 15 Not Assigned 2013-02-01 10:36:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b70f74cb5f4b499f14831fd6ad49d9238735e6ef

fdo#48440 fix import of RTF_PAGE between text frames



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Miklos Vajna 2013-02-02 10:15:52 UTC
-4-0 review: https://gerrit.libreoffice.org/1965
Comment 17 Ivan 2013-02-02 10:21:44 UTC
1. master~2013-02-02_00.14.06_LibO-Dev_4.1.0.0.alpha0_Win_x86.msi
This bug was fixed for .rtf!

2. I am sure that this bug is connected to this message for .docx file:
https://bugs.freedesktop.org/show_bug.cgi?id=54516

3. This link http://www.nalogy.ru/docs/spr/2013_kbk_nalogy_fns.doc, you can download a file consisting of 36 pages, but it is displayed only 3 - a problem with display of the table on 33 sheets in .doc

Thanks for corrections of mistakes!
Comment 18 Michael Stahl 2013-02-05 20:54:40 UTC
hi Ivan, please file a new bug for the .DOC since it's a different filter.
Comment 19 Not Assigned 2013-02-05 20:54:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=94765a1b3f543b3b60f8c1de05048d12f2576be4&h=libreoffice-4-0

fdo#48440 fix import of RTF_PAGE between text frames


It will be available in LibreOffice 4.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Robinson Tryon (qubit) 2015-12-17 12:06:04 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]