fdo#48440 fix import of RTF_PAGE between text frames

Normally such a page break is surrounded by text, and text() already
calls checkNeedPap(), but in case the whole paragraph contains a page
break only, we need it here as well.

Change-Id: I3961272d77c743e0e6da2d5052e57cec5f5937e7