writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -1820,6 +1820,7 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
                 }
                 else
                 {
+                    checkNeedPap();
                     sal_uInt8 sBreak[] = { 0xc };
                     Mapper().text(sBreak, 1);
                     if (!m_bNeedPap)
